# BEES_DE_breweries_case

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html
app/: dashboard.py
dags/agregando_dados_dag/: index.html
dags/busca_dados_dag/: index.html
dags/transformacao_dados_dag/: index.html
dags_bkp/: agregando_dados_dag.py  busca_dados_dag.py  transformacao_dados_dag.py
docker-airflow/: docker-compose.yaml
docker-airflow/dags/: agregando_dados_dag.py  busca_dados_dag.py  transformacao_dados_dag.py
docker-airflow/scripts/: agregando_dados.py  busca_dados.py  transformacao_dados.py
docs/: index.md
docs/dags/: agregando_dados_dag.md  busca_dados_dag.md  transformacao_dados_dag.md
docs/scripts/: agregando_dados.md  busca_dados.md  transformacao_dados.md
scripts/: agregando_dados.py  busca_dados.py  transformacao_dados.py
scripts/agregando_dados/: index.html
scripts/busca_dados/: index.html
scripts/transformacao_dados/: index.html
scripts_bkp/: agregando_dados.py  busca_dados.py  transformacao_dados.py
search/: search_index.json
tests/: test_agregando_dados.py  test_busca_dados.py  test_transformacao_dados.py
