[tool.poetry]
name = "bees-de-breweries-case"
version = "0.1.0"
description = ""
authors = ["LeoGrochoski <leogrochoski10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.2"
boto3 = "^1.34.151"
python-dotenv = "^1.0.1"
pyarrow = "^17.0.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
