[tool.poetry]
name = "bees-de-breweries-case"
version = "0.1.0"
description = ""
authors = ["LeoGrochoski <leogrochoski10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
requests = "^2.32.3"
pandas = "^1.5.3"
boto3 = "^1.34.151"
python-dotenv = "^1.0.1"
pyarrow = "^17.0.0"
pytest = "^8.3.2"
streamlit = "^1.37.0"
plotly = "^5.23.0"
apache-airflow = "2.9.3"  
docutils = "^0.20"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
